style.css
body{
  width:95%;
  margin:0 auto;
}

p{
  color:black;
  font-family: "Crimson Text", Georgia, "Times New Roman", serif;
  font-size:1rem;
  line-height:1.5rem;
}

#nav {
  list-style-type:none;
  margin:0 auto;
  padding:0;
  width:100%;
  text-align:left;
}

#nav li{
display:block;
color:#54585C;
background-color:#F1B82D;
text-align:center;
text-decoration:none;
padding:4px;
font-family:"Arimo", Helvetica, Arial, sans-serif;
order: 3;
border-style:none;
padding:0;
}

#nav a:link, a:visited{
  display:block;
  color:#54585C;
  background-color:#F1B82D;
  text-align:center;
  text-decoration:none;
  padding:4px;
  font-family:"Arimo", Helvetica, Arial, sans-serif;
}

#nav a:hover, #nav a:active{
  background-color:#F7D98D;
}
#nav {
  display:none;
}

#submenu a:link, a:visited{
    display:none;
}

#submenu  a:link, a:visited{
      display:block;
      color:#54585C;
      background-color:#F1B82D;
      text-align:right;
      text-decoration:none;
      padding:4px;
      font-family:"Arimo", Helvetica, Arial, sans-serif;
      width:95%;
      font-size:.8em;
  }

  /*hamburger menu stuff starts here*/

  .menu-trigger {
      color:#F1B82D;
      order: 3;
      font-size: 1.75em;
      width: -1em;
      border-style:none;
      padding:0;
      text-decoration:none;
      position:fixed;
      right: 0;
      top: 18%;
      margin-top: -2.5em;
      margin-right: 15px;

  }

  .menu-trigger a:link, /*a:hover*/{
    color:#F1B82D;
  }

h1{
  font-family:"Playfair Display", Georgia, "Times New Roman", serif;
  color:#02133B;
  /*font-size:?? idk what the font size should be*/
  font-weight:bold 400;
  text-align:center;
}

h2{
  font-family:"Arimo", Helvetica, Arial, sans-serif;
  color:#02133B;
  font-weight:400;
  text-align:center;
}

h3{
  font-family:"Arimo", Helvetica, Arial, sans-serif;
  font-size: 15px;
  font-weight: normal;
  text-align:left;
  color: #ffffff;
  line-height: 70%;
}


.footer h3 a:link, .footer h3 a:visited{
  color: #ffffff;
  text-decoration: underline;
}

.footer{
  background-color: #02133B;
}


/*site heading and logo style*/
.logo{
  align:center;
  border-style:none;
  border-top: none;
}

.siteheading h1{
  font-family:"Playfair Display", Georgia, "Times New Roman", serif;
  color:#02133B;
  font-weight:bold 400;
  text-align:left;
}
.subheading h1{
  font-family:"Playfair Display", Georgia, "Times New Roman", serif;
  color:#02133B;
  font-weight:bold 400;
  text-align:left;
}


#homepageimage{
  background-image:url("images/ktaheader.jpg");
  height:300px;
  width:100%;
  margin:auto;
  background-size:cover;
  background-position:center;
  background-repeat: no-repeat;
  border-style: none;
  z-index: -1;
}

#homepagetext{
  color:white;
  font-family:"Playfair Display", Georgia, "Times New Roman", serif;
  font-weight:bold;
  font-size:1.5em;
  position:absolute;
  left: 0;
  top: 30%;
  width: 100%;
  height:100px
  text-align: center;
  border:1px;
  background-color:rgba(255,255,255,0.3);

}

#startingimage{
  background-image:url("images/groupphoto1.jpg");
  height:400px;
  width:100%;
  min-width:200px;
  max-width: 600px;
  margin:auto;
  background-size:cover;
  background-position:center;
  background-repeat: no-repeat;
  color:white;
  margin-top: 0.5em;
  background-position: 50% 50%;
  }




/*find page style*/
.search-chapter-by-letter{
  text-align: center;
  font-style: normal;
  font-size:20px;
  text-decoration: none;
}

.search-chapter-by-letter a:link, .search-chapter-by-letter a:visited{
  text-decoration:none;
  color: black;
}

.search-chapter-by-letter a:hover, .search-chapter-by-letter a:active{
  text-decoration: underline;
}

#school-list a:link, #school-list a:visited{
  color: black;
}

#school-list{
  font-family:"Crimson Text", Georgia, "Times New Roman", serif;
}

.letters{
  font-weight: bold;
  font-size: 20px;
  text-decoration: none;
}

/*Reqs page style*/
#reqstitle h1{
  font-family:"Playfair Display", Georgia, "Times New Roman", serif;
  color:black;
  font-size:1.5rem;
  text-align: left;
}

#reqstitle p{
  font-family: "Crimson Text", Georgia, "Times New Roman", serif;
  color:black;
  font-size:1.2rem;
  text-align: left;
}


#reqsbody details{
  color:black;
  font-family: "Crimson Text", Georgia, "Times New Roman", serif;
  font-size:1rem;
  text-align:left;
}


#quicklinks h1{
  color:black;
  font-family:"Playfair Display", Georgia, "Times New Roman", serif;
  font-size:1.5rem;
  text-align:left;
}

#quicklinks p{
  color:black;
  font-family: "Crimson Text", Georgia, "Times New Roman", serif;
  font-size:1rem;
  text-align:left;
}


#helpfullinks li{
  text-align:left;
  font-size:1rem;
  font-family: "Crimson Text", Georgia, "Times New Roman", serif;
  color:black;
}

/*newsletter page style*/
#newstitle h1{
  font-family:"Playfair Display", Georgia, "Times New Roman", serif;
  color:black;
  font-size:1.5rem;
  text-align: left;
}
#newsbody p{
  color:black;
  font-family: "Crimson Text", Georgia, "Times New Roman", serif;
  font-size: 1rem;
  text-align: left;
}

#newsbody a:link, #newsbody a:visited{
  color: black
}

/*contact us style starts here*/

#contactbody p{
  color:black
  font-family: "Crimson Text", Georgia, "Times New Roman", serif;
  font-style: italic;
  font-size: 1rem;
  text-align:left;
  }

 #contactsubhead p{
   color:black;
   font-family: "Crimson Text", Georgia, "Times New Roman", serif;
   font-weight: bold;
   text-align: left;
 }


/*advisors style starts here*/

#constitution a:link,  #constitution a:visited{
  color:black;
  text-decoration: none;
}

#constitution a:hover{
  text-decoration: underline;
}

/*heading and navigation location & display order*/

.logo {
  float: left;
  width: 65px;
  height: 100px;
}

header.h1 {
  position: relative;
  top: 18px;
  left: 10px;
  margin-top: 25px;
}

header{
  margin-bottom:75px;
}

nav{
  margin-bottom:10px;
  margin-top: -40px;
}

/*back-to-top button starts here*/
  #myBtn {
      display: none;
      position: fixed;
      bottom: 20px;
      right: 30px;
      z-index: 99; /* Make sure it does not overlap */
      border: none;
      outline: none;
      background-color:#F1B82D;
      color: white;
      cursor: pointer;
      padding: 15px;
      border-radius: 10px; /* Rounded corners */
  }

  #myBtn:hover {
      background-color: #555;
  }

}

/*flexbox starts here*/



/*media queries start here*/
@media screen and (min-width:400px){
  #nav{
    flex-direction: column;
  }
  #submenu{
    display:block;
  }
  }

@media screen and (min-width: 700px){

    nav{
      background-color:#F1B82D;
      display:block;
      color:#54585C;
      background-color:#F1B82D;
      text-align:center;
      text-decoration:none;
      padding:4px;
      font-family:"Arimo", Helvetica, Arial, sans-serif;
      width:100%;
      font-size:1.25em;
    }

    #nav{
        display: flex;
        flex-direction: row;
        justify-content: space-around;

    }

    #nav{
        border-top: none;
}

    #submenu{
      display:none;
    }
    .menu-trigger {
        display: none;
    }
    .submenu-trigger{
      padding:0;
    }
    .siteheading h1{
    font-size:4em;
  }

  #homepagetext{
    font-size:3.5em;
    position:absolute;
    left: 0;
    top: 43%;
    width: 100%;
    text-align: center;
  }

  #homepageimage{
    max-width:100%

  }

}

